--- a/write.html
+++ b/write.html
@@ -63,7 +63,7 @@
           </div>
           <div class="form-group">
             <label for="content">내용</label>
-            <textarea id="content" class="editor-area" required style="display: block;"></textarea>
+            <textarea id="content" name="content" class="editor-area" required style="display: inline-block;"></textarea>
           </div>
           <div class="form-group">
             <label for="description">간단한 설명 (선택사항)</label>
